--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -8,7 +8,6 @@ h1 {
 }
 
 .projects-container {
-  align-items: center;
   margin: 0 auto;
 }
 
@@ -17,12 +16,17 @@ h1 {
   margin: 2rem 0rem 0.5rem;
 }
 
+.project-items {
+  justify-content: center;
+}
+
 @media only screen and (min-width: 960px) {
   .projects {
     padding: 4rem;
   }
   .project-items {
     display: flex;
-    margin-bottom: 1rem;
+    align-items: center;
+    justify-content: center;
   }
 }
